# MyShell

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
docs/: report.md
docs/design/: architecture.md
scripts/: format_all.sh  run_checks.sh  run_valgrind.sh
src/: main.c
